[tool.poetry]
name = "startest"
version = "0.1.0"
description = ""
authors = ["Swann <swann.bouviermuller@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
starlite = {path = "../starlite"}
uvicorn = "^0.18.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
